<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="body">Body :</string>
    <string name="title">Title :</string>
    <string name="no_reminders">No Reminders</string>
    <string name="date">Date :</string>
    <string name="time">Time :</string>
    <string name="confirm">SAVE</string>
    <string name="menu_insert">Add Reminder</string>
    <string name="notify_new_task_title">Task Reminder</string>
    <string name="menu_delete">Delete Reminder</string>
    <string name="task_saved_message">Message Saved</string>
    <string name="notify_new_task_message">A task needs to be viewed</string>
    
    
    
    
    
    
    
    

</resources>
